include $(top_srcdir)/common/python.mk
include $(top_srcdir)/common/locale.mk

flumotiondir = $(libdir)/flumotion/python/flumotion/project

flumotion_PYTHON = fragmentedstreaming.py

clean-local:
	rm -f *.pyc *.pyo

PROJECT = fragmentedstreaming

BUILT_SOURCES = fragmentedstreaming.py
CLEANFILES = $(BUILT_SOURCES)

EXTRA_DIST = fragmentedstreaming.py.in
